--- a/css/portfolioFotografia.css
+++ b/css/portfolioFotografia.css
@@ -1,54 +1,52 @@
-
-  @keyframes chacoalhar {
-    0%, 100% {
-        transform: translateX(0);
-    }
-    25% {
-        transform: translateX(-5px);
-    }
-    50% {
-        transform: translateX(5px);
-    }
-    75% {
-        transform: translateX(-5px);
-    }
+@keyframes chacoalhar {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
 }
 
-
-
-  #portfolio-fotografia h3 {
-    margin: 0;
-    opacity: 0;
-    position: absolute;
-    left: -200px;
-    transition: opacity 0.3s ease, transform 1.5s ease;
+#portfolio-fotografia h3 {
+  margin: 0;
+  opacity: 0;
+  position: absolute;
+  left: -200px;
+  transition: opacity 0.3s ease, transform 1.5s ease;
 }
 
 /* Nova classe para o estado ativo */
 #portfolio-fotografia h3.ativo {
-    opacity: 1;
-    transform: translateX(200px);
+  opacity: 1;
+  transform: translateX(200px);
 }
 
 /* Mantenha o restante do CSS original */
 #portfolio-fotografia {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 15rem;
-    width: 100%;
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 22rem;
+  width: 100%;
+  position: relative;
 }
 
 .portfolio-fotografia-imagem {
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
-    width: 100%;
-    transition: transform 0.3s ease;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  width: 100%;
+  transition: transform 0.3s ease;
 }
 
 #portfolio-fotografia img {
-    width: 70px;
-    cursor: pointer;
-    animation: chacoalhar 2s ease-in-out infinite;
+  width: 70px;
+  cursor: pointer;
+  animation: chacoalhar 2s ease-in-out infinite;
 }
