--- a/css/main.css
+++ b/css/main.css
@@ -32,27 +32,33 @@
 html {
   user-select: none;
   scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   background: var(--cor-background);
   color: var(--cor-texto-escuro);
-  max-width: 100%;
-  height: 100vh;
-  overflow: auto;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
   font-family: var(--font-family);
   font-size: 1rem;
   font-style: normal;
   position: relative;
-  scroll-behavior: smooth;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+
+}
+main {
+  flex: 1; 
 }
 
 .linha {
   position: absolute;
-  left: 50%;
+  left: 60%;
   top: 40%;
+  transform: translateX(-50%);
+  z-index: -3;
+  opacity: 0.7;
 }
 
 .sobre-mim-background {
@@ -73,7 +79,7 @@ body {
   width: 20%;
   position: absolute;
   top: -50%;
-  left: 90%;
+  left: 110%;
 }
 
 .background-cinza {
@@ -88,16 +94,34 @@ body {
   left: 20%;
   top: 40%;
   width: 20px;
+  z-index: 9999;
 }
 
 .main-imagem-circulo-meio {
   position: absolute;
-  left: 60%;
-  top: 75%;
+  left: 30%;
+  top: 15%;
   width: 40px;
 }
 
 .main-imagem-circulo-final {
   position: absolute;
   left: 40%;
+  top: 80%;
+}
+
+@media (max-width: 768px) {
+  .linha {
+    display: none;
+  }
+
+  .sobre-mim-2-background {
+    width: 100%; /* Ajusta a largura para ocupar a tela inteira */
+    margin-top: 5rem; /* Ajusta a margem superior */
+  }
+
+  .background-preto,
+  .background-cinza {
+    width: 50%; /* Ajusta a largura dos elementos de fundo */
+  }
 }
